Fixed layout issues

--- a/assets/scss/breakpoints/_481up.scss
+++ b/assets/scss/breakpoints/_481up.scss
@@ -121,8 +121,8 @@ do they need tweaking?
 	}
   .gaunit {
     float: right;
-    height: 250px;
-    width: 300px;
+    height: 280px;
+    width: 336px;
   }
 }
 
